# wired-apart

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  _quarto.yml  assignment.md  handoff.md  informe.qmd  pyproject.toml  styles.css
.github/workflows/: ci.yml
data/interim/: README.md
data/interim/yrbs/: yrbs2005.parquet  yrbs2007.parquet  yrbs2009.parquet  yrbs2011.parquet  yrbs2013.parquet  yrbs2015.parquet  yrbs2017.parquet  yrbs2019.parquet  yrbs2021.parquet
data/processed/: README.md  wonder_clean_2005_2024.csv  wonder_suicide_adolescent_2018_2024.csv  yrbs_clean_2005_2021.parquet
models/: README.md
notebooks/: 0.0-dh-data-acquisition.ipynb  1.0-dh-mtf-cleaning.ipynb  1.0-dh-yrbs-cleaning.ipynb  1.1-dh-wonder-cleaning.ipynb  2.0-dh-eda-mtf.ipynb  2.0-dh-eda-yrbs.ipynb  2.1-dh-eda-nsduh.ipynb  2.1-dh-eda-wonder.ipynb  3.0-dh-analysis.ipynb  4.0-dh-storytelling.ipynb  5.0-dh-solution.ipynb
references/: apa.csl  data_provenance.md  mtf_data_dictionary.md  nsduh_data_dictionary.md  references.bib  wonder_data_dictionary.md  yrbs_data_dictionary.md
reports/: script.md
reports/presentacion/: README.md  index.html  styles.css
scripts/: download_data.py  fix_attempted_suicide.py  fix_hispanic_yesno.py  validate_pipeline.py
tests/: conftest.py  test_data_integrity.py  test_plots.py  test_utf8_stdout.py
wired_apart/: __init__.py  config.py  dataset.py  features.py  plots.py
