[project]
name = "wired-apart"
version = "0.1.0"
description = "Cuantificando el coste de la childhood digital sobre el bienestar adolescente (EE.UU., 2005-2021)"
authors = [
    { name = "Diego Hernández", email = "diego.hernandez@example.com" },
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Education",
]
keywords = ["data-analysis", "adolescent-mental-health", "digital-wellbeing", "storytelling",
            "YRBS", "NCHS", "suicide-prevention", "Phone-Free-Schools"]
requires-python = ">=3.12"

dependencies = [
    # Core data stack
    "pandas>=2.2",
    "numpy>=1.26",
    # Visualization
    "matplotlib>=3.9",
    "seaborn>=0.13",
    # Statistics
    "scipy>=1.13",
    "statsmodels>=0.14",
    # I/O for YRBS Access files (Microsoft Access ODBC driver, Windows-only)
    "pyodbc>=5.0",
    # Parquet/Arrow for efficient storage of processed data
    "pyarrow>=15",
    # Notebooks
    "jupyter>=1.1",
    "jupytext>=1.16",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    # Utilities
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "jupyter-cache>=1.0",
    "papermill>=2.6",
    "nbstripout>=0.8",
]

[tool.ruff]
line-length = 99
src = ["wired_apart"]
include = ["pyproject.toml", "wired_apart/**/*.py"]

[tool.ruff.lint]
extend-select = ["I", "B", "UP"]  # isort, bugbear, pyupgrade
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["wired_apart"]
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter = "jupytext,kernelspec,language_info,-all"
cell_metadata_filter = "id,-all"

# Tell uv/pip to use this as the project marker.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
